Prueba de actualización

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"tsc --watch\" \"node dist/src/index.js --watch\"",
     "start": "tsc && node dist/src/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "tsc && npm publish"
   },
   "author": "Juan Camilo Cardona Calderón, Maria Carolina Cardona Calderón",
   "keywords": [
