--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "concurrently \"tsc --watch\" \"node dist/src/index.js --watch\"",
     "start": "tsc && node dist/src/index.js",
     "build": "tsc",
+    "publish:patch": "npm version patch && npm run release",
+    "publish:minor": "npm version minor && npm run release",
+    "publish:major": "npm version major && npm run release",
     "release": "npm run build && npm publish"
   },
   "author": "Juan Camilo Cardona Calderón, Maria Carolina Cardona Calderón",
