--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@nestjs/typeorm": "^11.0.0",
+    "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.21"
   }
 }
