Se agrega config de build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
   }
 }
