--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "9.0.0",
   "description": "This package contains the core of the echadospalante project, it contains the domain entities, helpers, and other utilities that are shared between the different services.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
