--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "strictPropertyInitialization": false,
-  }
+  },
+  "include": ["src/**/*.ts"],
 }
