--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@types/geojson": "^7946.0.16",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@nestjs/typeorm": "^11.0.0",
+    "@turf/turf": "^7.2.0",
+    "geojson": "^0.5.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.21"
