--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "echadospalante-core",
+  "name": "echadospalante-domain",
   "version": "14.17.0",
   "description": "This package contains the core of the echadospalante project, it contains the domain entities, helpers, and other utilities that are shared between the different services.",
   "main": "dist/index.js",
